--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 }
 body {
     background-color: black;
+    color: white;
 }
 
 /* stile header  */
@@ -14,9 +15,33 @@ header {
    justify-content: flex-end;
 }
 .icone-header {
-    color: white;
     background-color: lightslategray;
     margin: 5px;
     padding: 3px;
     border-radius: 5px;
+}
+
+/* stile partecipanti chiamata */
+main {
+    width: 90vw;
+    margin: auto;
+    margin-top: 2vw;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.foto-profilo {
+    margin: 5px 2px;
+    display: flex;
+    align-items: flex-end;
+}
+img {
+    width: 12vw;
+    height: 8vw;
+}
+.nome-cognome {
+    background-color: rgb(119, 136, 153,.5);
+    font-size: 1vw;
+    position: absolute;
 }
