--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,8 @@ main {
     width: 90vw;
     margin: auto;
     margin-top: 2vw;
+    margin-bottom: 2vw;
+    padding-bottom: 7%;
     display: flex;
     justify-content: center;
     flex-direction: row;
@@ -36,12 +38,40 @@ main {
     display: flex;
     align-items: flex-end;
 }
-img {
-    width: 12vw;
-    height: 8vw;
-}
 .nome-cognome {
     background-color: rgb(119, 136, 153,.5);
-    font-size: 1vw;
     position: absolute;
 }
+
+/* stile footer  */
+footer {
+    width: 100%;
+    background-color: grey;
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    bottom: 0;
+}
+footer div ul {
+    list-style-type: none;
+    display: flex;
+    text-align: center;
+}
+footer div ul li {
+    padding: 2%;
+}
+#first-part {
+    width: 10vw;
+}
+
+#end-meeting {
+    color: red;
+    background-color: rgb(73, 72, 72);
+    text-align: center;
+    vertical-align: middle;
+    padding: 2.5%;
+}
+footer div ul li i {
+    transform: scale(1.5);
+}
+
